# rules_auto_dotnet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  release.yaml  release_prep.sh
auto_dotnet/: BUILD.bazel  defs.bzl  extensions.bzl
auto_dotnet/private/: BUILD.bazel  dotnet_projects_repo.bzl  generated_props.bzl  generator.bzl  nuget_collector.bzl  parser.bzl  path_utils.bzl  tfm_utils.bzl
auto_dotnet/tests/: BUILD.bazel  dotnet_projects_repo_test.bzl  generator_test.bzl  nuget_collector_test.bzl  parser_test.bzl  scale_smoke_test.bzl  tfm_utils_test.bzl
docs/design/: README.md  nuget-collection.md  phase0-baseline-audit.md  project-scanning.md  tfm-validation.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  integration_scan_projects_verify.py  paket.dependencies
e2e/smoke/src/app/: App.csproj  Program.cs
e2e/smoke/src/core/: Core.cs  Core.csproj
e2e/smoke/src/lib/: Lib.cs  Lib.csproj  paket.references
e2e/smoke/src/tests/: CoreTests.cs  CoreTests.csproj
e2e/strict_failure/: MODULE.bazel  WORKSPACE.bazel  paket.dependencies  verify_strict_failure.sh
e2e/strict_failure/src/core/: Core.cs  Core.csproj  MissingPaket.cs  MissingPaket.csproj
e2e/strict_failure/src/tests/: CoreTests.cs  CoreTests.csproj
tools/: BUILD.bazel  phase0_scale_benchmark.sh  sync_paket_references.py  sync_paket_references_test.py
