load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//auto_dotnet/private:generated_props",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//auto_dotnet/private:dotnet_projects_repo",
        "//auto_dotnet/private:tfm_utils",
    ],
)
