load("@bazelrc-preset.bzl", "bazelrc_preset")
load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

buildifier_test(
    name = "buildifier.test",
    no_sandbox = True,
    workspace = "//:MODULE.bazel",
)

exports_files([
    "phase0_scale_benchmark.sh",
])
