load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "parser",
    srcs = ["parser.bzl"],
    visibility = ["//auto_dotnet:__subpackages__"],
    deps = [
        "@xml.bzl//:xml",
    ],
)

bzl_library(
    name = "nuget_collector",
    srcs = ["nuget_collector.bzl"],
    visibility = ["//auto_dotnet:__subpackages__"],
)

bzl_library(
    name = "path_utils",
    srcs = ["path_utils.bzl"],
    visibility = ["//auto_dotnet:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "generator",
    srcs = ["generator.bzl"],
    visibility = ["//auto_dotnet:__subpackages__"],
    deps = [
        ":parser",
        ":path_utils",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "tfm_utils",
    srcs = ["tfm_utils.bzl"],
    visibility = ["//auto_dotnet:__subpackages__"],
)

bzl_library(
    name = "dotnet_projects_repo",
    srcs = ["dotnet_projects_repo.bzl"],
    visibility = ["//auto_dotnet:__subpackages__"],
    deps = [
        ":generator",
        ":nuget_collector",
        ":parser",
        ":path_utils",
        ":tfm_utils",
        "@bazel_lib//lib:glob_match",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "generated_props",
    srcs = ["generated_props.bzl"],
    visibility = ["//auto_dotnet:__subpackages__"],
    deps = [
        "@bazel_lib//lib:write_source_files",
        "@xml.bzl//:xml",
    ],
)
