bazel_dep(name = "rules_auto_dotnet", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

local_path_override(
    module_name = "rules_auto_dotnet",
    path = "../..",
)

auto_dotnet = use_extension("@rules_auto_dotnet//auto_dotnet:extensions.bzl", "auto_dotnet")
auto_dotnet.toolchain(dotnet_version = "10.0.100")
auto_dotnet.scan_projects(
    emit_diagnostics_report = True,
    exclude_patterns = [
        "**/.git/**",
        "**/bazel-*/**",
    ],
    internals_visibility_diagnostics = "strict",
    paket_diagnostics = "strict",
    parser_diagnostics = "warn",
    toolchain_diagnostics = "warn",
)
use_repo(auto_dotnet, "dotnet_projects")
